[package]
name = "flux-vm-v3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10"
rayon = "1.8"

[lib]
name = "flux_vm"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "flux_bench"
harness = false
path = "benches/flux_bench.rs"

[[bench]]
name = "real_world_bench"
harness = false
path = "benches/real_world_bench.rs"
